--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,9 @@
 // IMPORTS
-@import "headerAndFooter";
-@import "variables";
-@import "grid-main";
-@import "nav";
-@import "images";
+@import 'headerAndFooter';
+@import 'variables';
+@import 'grid-main';
+@import 'nav';
+@import 'images';
 // media querie import at bottom because of cascade order
 
 // MIXINS
@@ -43,8 +43,8 @@
       text-align: left;
       font-weight: 600;
       &::before {
-        font-family: "Font Awesome 6 Free";
-        content: "\f00c";
+        font-family: 'Font Awesome 6 Free';
+        content: '\f00c';
         color: map-get($mapColorsBlue, blue7);
         padding: 8px;
       }
@@ -69,8 +69,8 @@
     font-size: 1.5rem;
   }
   // price area
-  h6[class*="ice-"] {
-    font-family: Georgia, "Times New Roman", Times, serif; //different font for price
+  h6[class*='ice-'] {
+    font-family: Georgia, 'Times New Roman', Times, serif; //different font for price
     font-size: 6rem;
     font-weight: 500;
 
@@ -130,7 +130,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif; //page Font definition
+  font-family: 'Montserrat', sans-serif; //page Font definition
   background: linear-gradient(
     $light,
     map-get($mapColorsOrange, orange3)
@@ -143,7 +143,7 @@ body {
   color: map-get($mapColorsOrange, orange8);
   margin: 5rem auto;
   // costom underline
-  div[class*="underline"] {
+  div[class*='underline'] {
     background: $underlineBlue;
     width: 100%;
     height: 2px;
@@ -196,7 +196,7 @@ body {
     flex-wrap: wrap;
     gap: 40px;
     justify-content: space-evenly;
-    img[class*="farm-img"] {
+    img[class*='farm-img'] {
       width: 350px;
       height: auto;
       filter: sepia(0.3); // color filter for images
@@ -226,7 +226,7 @@ body {
   background-color: map-get($mapColorsOrange, orange2);
   border-radius: 1rem;
   box-shadow: map-get($mapShadows, shadowRough);
-  div[class*="alp-image"] {
+  div[class*='alp-image'] {
     width: 150px;
     // flex-basis: 150px;
     flex-shrink: 0;
@@ -351,14 +351,14 @@ body {
 // SHOP
 .container-shop {
   @include cardsContainer;
-  div[class*="shop-card"] {
+  div[class*='shop-card'] {
     @include cardItem;
     @include cardsText;
     height: 340px;
     &:hover {
       @include scale;
     }
-    [class*="shop-image"] {
+    [class*='shop-image'] {
       width: 100%;
       height: 40%;
       border-radius: $borderRadiusCards $borderRadiusCards 0 0;
@@ -423,4 +423,27 @@ p {
   margin: 1em;
 }
 
-@import "mediaqueries"; // importet here because it didn't work at top
+.to-top {
+  position: relative;
+  left: -10%; // btn off to the left
+  border: 2px solid;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: map-get($mapColorsOrange, orange4);
+  box-shadow: map-get($mapShadows, shadowRough);
+  a:active {
+    color: black; //to-top btn black color when clicked
+  }
+  & a::before {
+    font-family: 'Font Awesome 6 Free';
+    content: '\f102';
+    font-weight: 600;
+    font-size: 3.5rem;
+    position: absolute;
+    right: 16px;
+    top: 10px;
+  }
+}
+
+@import 'mediaqueries'; // importet here because it didn't work at top
