--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,12 @@
 }
 .container-header .header-image {
   height: 100%;
-  background: linear-gradient(to right, lightyellow, orange);
   background-image: url("/assets/images/a_downloaded/headers/header_3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: lightsalmon;
   z-index: 1;
-  opacity: 0.7;
+  opacity: 0.75;
 }
 
 .footer {
@@ -735,8 +734,8 @@ p {
   }
 }
 @media (min-width: 830px) {
-  .container-header {
-    height: 500px;
+  .container-header .header-image {
+    background-position: 0 -40px;
   }
   .container-alp-images {
     overflow-x: hidden;
@@ -750,18 +749,16 @@ p {
   }
 }
 @media (min-width: 1000px) {
-  .nav .drop-down-btn {
+  .container-header .header-image {
+    background-position: 0 -90px;
+  }
+  .container-header .nav .drop-down-btn {
     display: none;
   }
-  .nav ul.drop-down-menu {
+  .container-header .nav ul.drop-down-menu {
     display: flex;
     top: 10px;
     flex-direction: row;
-  }
-}
-@media (min-width: 1400px) {
-  .container-header {
-    height: 700px;
   }
 }
 @media (min-width: 1500px) {
