--- a/scss/_headerAndFooter.scss
+++ b/scss/_headerAndFooter.scss
@@ -19,14 +19,14 @@
   }
   .header-image {
     height: 100%;
-    background: $gradientOne;
+    // background: $gradientOne;
     background-image: url('/assets/images/a_downloaded/headers/header_3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: lightsalmon;
     z-index: 1;
 
-    opacity: 0.7;
+    opacity: 0.75;
   }
 }
 
